# haskell-sample

./: Makefile  README.md  meatbar.cabal  stack.yaml
app/: Main.hs
src/: Meatbar.hs
src/Meatbar/: Env.hs  Load.hs  Model.hs  Web.hs
src/Meatbar/Data/: Analysis.hs
src/Meatbar/Database/: Consumption.hs  Person.hs
src/Meatbar/Web/: Env.hs  Route.hs  Types.hs
src/Meatbar/Web/Control/: Consumption.hs  Person.hs
test/: Spec.hs
