name:                meatbar
version:             0.1.0.0
synopsis:            Meatbar analytics HTTP API
description:         Front Row Interview Project
homepage:            https://bitbucket.org/lseppala/meatbar
license:             BSD3
license-file:        LICENSE
author:              Lane Seppala
maintainer:          lane@something.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Meatbar
  build-depends:       base
                     , cassava
                     , persistent
                     , persistent-sqlite
                     , scotty
  default-language:    Haskell2010

executable meatbar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , meatbar
  default-language:    Haskell2010

test-suite meatbar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , meatbar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
